--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Project Adonis</title>
-    <link rel=“stylesheet” type=“text/css” href=“style.css” />
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="wrapper">
-        <canvas id="stars"></canvas>
-        <canvas id="yahia"></canvas>
         <div class="container">
           <div class="template color-yellow" data-template="home">
             <main>
@@ -24,13 +23,6 @@
               <div class="links"><a class="link small alt" href="http://facebook.com/YahiaRefaiea" title="Facebook (@YahiaRefaiea)" target="_blank">Facebook</a><a class="link small alt" href="http://twitter.com/YahiaRefaiea" title="Twitter (@YahiaRefaiea)" target="_blank">Twitter</a><a class="link small alt" href="http://codepen.io/YahiaRefaiea" title="Codepen (@YahiaRefaiea)" target="_blank">Codepen</a><a class="link small alt" href="http://github.com/YahiaRefaiea" title="GitHub (@YahiaRefaiea)" target="_blank">GitHub</a></div>
             </footer>
           </div>
-          <div class="loading" id="identity" title="Yahia Refaiea identity">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
-          <a class="loading" id="signature" href="https://beta.yahiarefaiea.com/" title="Go to home" target="_blank"></a>
         </div>
       </div>
 </body>
