--- a/index.html
+++ b/index.html
@@ -1,29 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Project Adonis</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="container">
-          <div class="template color-yellow" data-template="home">
-            <main>
-              <h1><span>A 
-                  <mark>21 years</mark> old</span><span> interaction designer</span></h1>
-              <div class="p"><span>hello@yahiarefaiea.com</span><span>(+963) 96 2295 406</span></div>
-              <div class="links">
-                <a class="link color-yellow" href="https://beta.yahiarefaiea.com/#bucket" title="View my bucket list" target="_blank">View my bucket list</a>
-                <a class="link color-green" href="https://beta.yahiarefaiea.com/#secret" title="Tell me a secret" target="_blank">Tell me a secret</a>
-                <a class="link color-red" href="https://beta.yahiarefaiea.com/Yahia_Refaiea_Resume.pdf" title="Download my résumé" target="_blank">Download my résumé</a>
-              </div>
-            </main>
-            <footer>
-              <div class="links"><a class="link small alt" href="http://facebook.com/YahiaRefaiea" title="Facebook (@YahiaRefaiea)" target="_blank">Facebook</a><a class="link small alt" href="http://twitter.com/YahiaRefaiea" title="Twitter (@YahiaRefaiea)" target="_blank">Twitter</a><a class="link small alt" href="http://codepen.io/YahiaRefaiea" title="Codepen (@YahiaRefaiea)" target="_blank">Codepen</a><a class="link small alt" href="http://github.com/YahiaRefaiea" title="GitHub (@YahiaRefaiea)" target="_blank">GitHub</a></div>
-            </footer>
-          </div>
-        </div>
+
+<div class='screen'>
+  <div class='nav'>
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="36px" height="36px" viewBox="0 0 199.522 199.522" style="enable-background:new 0 0 199.522 199.522;" xml:space="preserve"><path d="M174.319,99.761l24.198-41.913c1.34-2.32,1.34-5.18,0-7.5L172.154,4.685c-1.34-2.32-3.815-3.75-6.495-3.75h-52.728
+	c-2.68,0-5.155,1.43-6.495,3.75L82.238,46.598H33.863c-2.68,0-5.155,1.43-6.495,3.75L1.005,96.011c-1.34,2.32-1.34,5.18,0,7.5
+	l26.363,45.663c1.34,2.32,3.815,3.75,6.495,3.75h48.375l24.198,41.913c1.34,2.32,3.815,3.75,6.495,3.75h52.728
+	c2.68,0,5.155-1.43,6.495-3.75l26.363-45.663c1.34-2.32,1.34-5.18,0-7.5L174.319,99.761z M76.798,76.442H45.542L32.079,99.761
+	l15.628,27.068c2.071,3.587,0.842,8.174-2.745,10.245c-1.181,0.682-2.471,1.006-3.743,1.006c-2.592,0-5.113-1.345-6.502-3.751
+	l-17.793-30.818c-1.34-2.32-1.34-5.18,0-7.5l17.793-30.818c1.34-2.32,3.815-3.75,6.495-3.75h35.586c4.142,0,7.5,3.358,7.5,7.5
+	S80.94,76.442,76.798,76.442z M123.805,168.646c2.071,3.587,0.842,8.174-2.745,10.245c-1.181,0.682-2.471,1.006-3.743,1.006
+	c-2.592,0-5.112-1.345-6.502-3.751l-15.801-27.367c-1.34-2.32-1.34-5.18,0-7.5l15.801-27.367c2.07-3.588,6.659-4.817,10.245-2.745
+	c3.587,2.071,4.816,6.658,2.745,10.245l-13.636,23.617L123.805,168.646z M154.29,29.935h-28.945l-14.472,25.067
+	c-1.389,2.406-3.91,3.751-6.502,3.751c-1.272,0-2.562-0.324-3.743-1.006c-3.587-2.071-4.816-6.658-2.745-10.245l16.637-28.817
+	c1.34-2.32,3.815-3.75,6.495-3.75h33.275c4.143,0,7.5,3.358,7.5,7.5S158.432,29.935,154.29,29.935z"/>
+    </svg>
+    <nav>
+      <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
+      <button onclick="jump('sec-about');" class='button-nav'>About</button>
+      <button onclick="jump('sec-projects');" class='button-nav-cta'>Projects</button>
+    </nav>
+  </div>
+  <div class='page'>
+    <section class='hero'>
+      <div class='cta'>Project Adonis</br><span>A Young Developer's Journey to Creating Beautiful and Elegant Websites</span></div>
+      <button onclick="jump('sec-projects');" class='button-cta'>The Projects</button>
+    </section>
+    <section class='projects'>
+      <div class='section-name' id='sec-projects'>PROJECTS</div>
+      <div class='section-title'>Finished websites</div>
+      <div class='projects-container'>
+        <div class='projects-item'><div class='item-number'>01</div><div class='item-text'>Immersive Worlds</div></div>
+        <div class='projects-item'><div class='item-number'>02</div><div class='item-text'>History: Chernobyl</div></div>
+        <div class='projects-item'><div class='item-number'>03</div><div class='item-text'>AI tools directory</div></div>
       </div>
+    </section>
+    <section class='goal'>
+      <div class='section-name' id='sec-goal'>COMENTS</div>
+        <div class='box-clients'>
+					<p class='speech'><span></span>elegant [ˈeləɡənt] adjective: pleasingly ingenious and simple.</p>
+					<div class='id-signature'>A greec god,</br>&nbsp&nbsp&nbsp&nbspAdonis</div>
+      	</div>
+    </section>
+    <section class='second-cta'>
+      <div class='section-title negative'>About</div>
+      <div class='about-content' id='sec-about'>About me</div>
+    </section>
+    <section class='footer'>
+      <svg id='scrollup' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 200.387 200.387" style="enable-background:new 0 0 200.387 200.387;" xml:space="preserve" width="28px" height="28px"><g><g><g><polygon points="5.504,154.449 0,149.102 100.197,45.938 200.387,149.102 194.893,154.449 100.197,56.947         " fill="#f3bf02"/></g></g><polygon points="100.197,45.938 0,149.102 5.504,154.449 100.197,56.947 194.893,154.449 200.387,149.102     " fill="#f3bf02"/></g>
+      </svg>
+      <div class='copy'>Copyright &copy; 2023 by Maycon Luiz (https://codepen.io/mycnlz/pen/qZNKve)<br>Original design largely modified by Josh.</div>
+    </section>
+  </div>
+</div>
+
 </body>
 </html>
