Goal styles modified for smaller screens

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class='section-name' id='sec-goal'>COMENTS</div>
         <div class='box-clients'>
 					<p class='speech'><span></span>elegant [ˈeləɡənt] adjective: pleasingly ingenious and simple.</p>
-					<div class='id-signature'>A greec god,</br>&nbsp&nbsp&nbsp&nbspAdonis</div>
+					<div class='id-signature'>Adonis</div>
       	</div>
     </section>
     <section class='second-cta'>
