Hamburger menu setup

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
       <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
       <button onclick="jump('sec-about');" class='button-nav'>About</button>
       <button onclick="jump('sec-projects');" class='button-nav-cta'>Projects</button>
+      <div class="hamburger-menu">
+        <button class="hamburger-button">&#9776;</button>
+        <div class="hamburger-content">
+          <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
+          <button onclick="jump('sec-about');" class='button-nav'>About</button>
+          <button onclick="jump('sec-projects');" class='button-nav-cta'>Projects</button>
+        </div>
+      </div>
     </nav>
   </div>
   <div class='page'>
