--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
       <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
       <button onclick="jump('sec-about');" class='button-nav'>About</button>
       <button onclick="jump('sec-projects');" class='button-nav-cta'>Projects</button>
-      <div class="hamburger-menu">
-        <button class="hamburger-button">&#9776;</button>
-        <div class="hamburger-content">
-          <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
-          <button onclick="jump('sec-about');" class='button-nav'>About</button>
-          <button onclick="jump('sec-projects');" class='button-nav-cta'>Projects</button>
-        </div>
+      <button class="hamburger">
+        <div class="hamburger-line"></div>
+        <div class="hamburger-line"></div>
+        <div class="hamburger-line"></div>
+      </button>
+      <div class="menu">
+        <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
+        <button onclick="jump('sec-about');" class='button-nav'>About</button>
+        <button onclick="jump('sec-projects');" class='button-nav-cta'>Projects</button>
       </div>
     </nav>
   </div>
