New hamburger menu

--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
       <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
       <button onclick="jump('sec-about');" class='button-nav'>About</button>
       <button onclick="jump('sec-projects');" class='button-nav-cta'>Projects</button>
-      <button class="hamburger">
+      <div class="hamburger">
         <div class="hamburger-line"></div>
         <div class="hamburger-line"></div>
         <div class="hamburger-line"></div>
-      </button>
+      </div>
       <div class="menu">
         <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
         <button onclick="jump('sec-about');" class='button-nav'>About</button>
-        <button onclick="jump('sec-projects');" class='button-nav-cta'>Projects</button>
       </div>
     </nav>
   </div>
