Entirely new hamburger style menu

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
       <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
       <button onclick="jump('sec-about');" class='button-nav'>About</button>
       <button onclick="jump('sec-projects');" class='button-nav-cta'>Projects</button>
-      <div class="hamburger">
-        <div class="hamburger-line"></div>
-        <div class="hamburger-line"></div>
-        <div class="hamburger-line"></div>
-      </div>
-      <div class="menu">
-        <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
-        <button onclick="jump('sec-about');" class='button-nav'>About</button>
-      </div>
+      <label>
+        <input class="checkbox" type="checkbox">
+        <span class="menu"> <span class="hamburger"></span> </span>
+        <ul>
+          <button onclick="jump('sec-goal');" class='menu-button'>My Goal</button>
+          <button onclick="jump('sec-about');" class='menu-button'>About</button>
+          <button onclick="jump('sec-projects');" class='menu-button'>Projects</button>
+        </ul>
+        </label>
     </nav>
   </div>
   <div class='page'>
