no more hamburger menu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Project Adonis</title>
@@ -21,15 +21,6 @@
       <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
       <button onclick="jump('sec-about');" class='button-nav'>About</button>
       <button onclick="jump('sec-projects');" class='button-nav-cta'>Projects</button>
-      <label>
-        <input class="checkbox" type="checkbox">
-        <span class="menu"> <span class="hamburger"></span> </span>
-        <ul>
-          <button onclick="jump('sec-goal');" class='menu-button'>My Goal</button>
-          <button onclick="jump('sec-about');" class='menu-button'>About</button>
-          <button onclick="jump('sec-projects');" class='menu-button'>Projects</button>
-        </ul>
-        </label>
     </nav>
   </div>
   <div class='page'>
