--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 <div class='screen'>
   <div class='nav'>
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="36px" height="36px" viewBox="0 0 60 60" style="enable-background:new 0 0 199.522 199.522;" xml:space="preserve">
+    <button class="refresh" onClick="window.location.reload();"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="36px" height="36px" viewBox="0 0 60 60" style="enable-background:new 0 0 199.522 199.522;" xml:space="preserve">
       <path
       d="m 6.6826 4.6879 c -1.1054 0 -1.9953 0.8962 -1.9953 2.0095 v 46.606 c 0 1.113 0.8899 2.009 1.9953 2.009 h 46.634 c 1.106 0 1.996 -0.896 1.996 -2.009 v -46.606 c 0 -1.1129 -0.89 -2.0091 -1.996 -2.0091 h -46.634 z M 6 7 L 53 7 L 6 53 M 53 53 L 6 53 L 53 7"
       />
       <path
       d="m33.272 41.552v-23.145c0-1.165 0.311-2.059 0.934-2.682s1.436-0.935 2.439-0.935c1.016 0 1.829 0.305 2.438 0.915 0.623 0.609 0.935 1.51 0.935 2.702v20.239h7.234c1.056 0 1.883 0.278 2.479 0.833 0.596 0.542 0.894 1.314 0.894 2.317 0 0.975-0.298 1.747-0.894 2.316s-1.423 0.854-2.479 0.854h-10.607c-0.908 0-1.7-0.305-2.378-0.915-0.664-0.623-0.995-1.456-0.995-2.499zm-17.151-20.483v8.21h3.617c0.908 0 1.7-0.19 2.378-0.569 0.677-0.38 1.192-0.881 1.544-1.504s0.528-1.294 0.528-2.012c0-1.3-0.406-2.309-1.219-3.027-0.813-0.732-1.89-1.098-3.231-1.098h-3.617zm-6.746 20.524v-23.145c0-1.043 0.3319-1.869 0.996-2.479 0.677-0.623 1.47-0.935 2.377-0.935h8.27c1.762 0 3.421 0.393 4.979 1.179 1.571 0.772 2.824 1.93 3.759 3.475 0.948 1.53 1.423 3.366 1.423 5.506 0 1.965-0.387 3.719-1.159 5.263-0.772 1.531-1.903 2.73-3.393 3.597s-3.285 1.3-5.385 1.3h-5.121v6.239c0 1.178-0.311 2.079-0.934 2.702-0.61 0.61-1.423 0.915-2.439 0.915-0.989 0-1.802-0.312-2.438-0.935-0.6234-0.637-0.935-1.531-0.935-2.682z"
       />
-    </svg>
+    </svg></button>
     <nav>
       <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
       <button onclick="jump('sec-about');" class='button-nav'>About</button>
@@ -26,33 +26,74 @@
   <div class='page'>
     <section class='hero'>
       <div class='cta'>Project Adonis</br><span>A Young Developer's Journey to Creating Beautiful and Elegant Websites</span></div>
-      <button onclick="jump('sec-projects');" class='button-cta'>The Projects</button>
+      <button onclick="jump('sec-projects');" class='button-cta'>The Websites</button>
     </section>
     <section class='projects'>
       <div class='section-name' id='sec-projects'>PROJECTS</div>
       <div class='section-title'>Finished websites</div>
       <div class='projects-container'>
-        <div class='projects-item'><div class='item-number'>01</div><div class='item-text'>Immersive Worlds</div></div>
-        <div class='projects-item'><div class='item-number'>02</div><div class='item-text'>History: Chernobyl</div></div>
-        <div class='projects-item'><div class='item-number'>03</div><div class='item-text'>AI tools directory</div></div>
+        <a href="https://project-adonis.github.io/Immersive-Worlds/" target="_blank"> <div class='projects-item'><div class='item-number'>01</div><div class='item-text'>Immersive Worlds
+          <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
+          0 48 48">
+          <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
+          0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
+          0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6 
+          6-6v-12c0-1.2-0.8-2-2-2z"></path>
+          <path d="M43.8 5.2c-0.2-0.4-0.6-0.8-1-1-0.2-0.2-0.6-0.2-0.8-0.2h-12c-1.2 
+          0-2 0.8-2 2s0.8 2 2 2h7.2l-18.6 18.6c-0.8 0.8-0.8 2 0 2.8 0.4 0.4 0.8 
+          0.6 1.4 0.6s1-0.2 1.4-0.6l18.6-18.6v7.2c0 1.2 0.8 2 2 2s2-0.8 
+          2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
+          </svg>
+          </div></div></a>
+          <a href="#"> <div class='projects-item'><div class='item-number'>02</div><div class='item-text'>History: Chernobyl<br> Work in progress!
+          <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
+          0 48 48">
+          <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
+          0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
+          0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6 
+          6-6v-12c0-1.2-0.8-2-2-2z"></path>
+          <path d="M43.8 5.2c-0.2-0.4-0.6-0.8-1-1-0.2-0.2-0.6-0.2-0.8-0.2h-12c-1.2 
+          0-2 0.8-2 2s0.8 2 2 2h7.2l-18.6 18.6c-0.8 0.8-0.8 2 0 2.8 0.4 0.4 0.8 
+          0.6 1.4 0.6s1-0.2 1.4-0.6l18.6-18.6v7.2c0 1.2 0.8 2 2 2s2-0.8 
+          2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
+          </svg>
+          </div></div></a>
+          <a href="#"> <div class='projects-item'><div class='item-number'>03</div><div class='item-text'>AI tools directory<br> Work in progress!
+          <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
+          0 48 48">
+          <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
+          0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
+          0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6 
+          6-6v-12c0-1.2-0.8-2-2-2z"></path>
+          <path d="M43.8 5.2c-0.2-0.4-0.6-0.8-1-1-0.2-0.2-0.6-0.2-0.8-0.2h-12c-1.2 
+          0-2 0.8-2 2s0.8 2 2 2h7.2l-18.6 18.6c-0.8 0.8-0.8 2 0 2.8 0.4 0.4 0.8 
+          0.6 1.4 0.6s1-0.2 1.4-0.6l18.6-18.6v7.2c0 1.2 0.8 2 2 2s2-0.8 
+          2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
+          </svg>
+          </div></div></a>
       </div>
     </section>
     <section class='goal'>
-      <div class='section-name' id='sec-goal'>COMENTS</div>
+      <div class='section-name' id='sec-goal'>GOAL</div>
         <div class='box-clients'>
-					<p class='speech'><span></span>elegant [ˈeləɡənt] adjective: pleasingly ingenious and simple.</p>
-					<div class='id-signature'>Adonis</div>
+					<p class='speech'><span></span>elegant [ˈeləɡənt] adjective: pleasingly ingenious and simple. The guiding principle of this project.</p>
+					<div class='id-signature'>Elegance</div>
       	</div>
     </section>
     <section class='second-cta'>
-      <div class='section-title negative'>About</div>
-      <div class='about-content' id='sec-about'>About me</div>
+      <div class='section-title negative'>About me</div>
+      <div class='about-content' id='sec-about'>Hey, I’m Josh (Pierre-Louis). I’m a 16-year-old web designer from France. I’m into computers, online stuff, and gaming. I also translate, proofread, and make audio visualizations. I learn web dev by recreating websites and getting inspired by the web. I aim to achieve elegance in every aspect, from design to functionality.
+      </div>
     </section>
     <section class='footer'>
-      <div class='socials'>Socials + buttons on straight line</div>
+          <div class="social">
+            <a href="https://github.com/Project-Adonis" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0,0,256,256" width="45px" height="45px" fill-rule="nonzero"><g fill="#f3bf02" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(4,4)"><path d="M32,6c-14.359,0 -26,11.641 -26,26c0,12.277 8.512,22.56 19.955,25.286c-0.592,-0.141 -1.179,-0.299 -1.755,-0.479v-5.957c0,0 -0.975,0.325 -2.275,0.325c-3.637,0 -5.148,-3.245 -5.525,-4.875c-0.229,-0.993 -0.827,-1.934 -1.469,-2.509c-0.767,-0.684 -1.126,-0.686 -1.131,-0.92c-0.01,-0.491 0.658,-0.471 0.975,-0.471c1.625,0 2.857,1.729 3.429,2.623c1.417,2.207 2.938,2.577 3.721,2.577c0.975,0 1.817,-0.146 2.397,-0.426c0.268,-1.888 1.108,-3.57 2.478,-4.774c-6.097,-1.219 -10.4,-4.716 -10.4,-10.4c0,-2.928 1.175,-5.619 3.133,-7.792c-0.2,-0.567 -0.533,-1.714 -0.533,-3.583c0,-1.235 0.086,-2.751 0.65,-4.225c0,0 3.708,0.026 7.205,3.338c1.614,-0.47 3.341,-0.738 5.145,-0.738c1.804,0 3.531,0.268 5.145,0.738c3.497,-3.312 7.205,-3.338 7.205,-3.338c0.567,1.474 0.65,2.99 0.65,4.225c0,2.015 -0.268,3.19 -0.432,3.697c1.898,2.153 3.032,4.802 3.032,7.678c0,5.684 -4.303,9.181 -10.4,10.4c1.628,1.43 2.6,3.513 2.6,5.85v8.557c-0.576,0.181 -1.162,0.338 -1.755,0.479c11.443,-2.726 19.955,-13.009 19.955,-25.286c0,-14.359 -11.641,-26 -26,-26zM33.813,57.93c-0.599,0.042 -1.203,0.07 -1.813,0.07c0.61,0 1.213,-0.029 1.813,-0.07zM37.786,57.346c-1.164,0.265 -2.357,0.451 -3.575,0.554c1.218,-0.103 2.411,-0.29 3.575,-0.554zM32,58c-0.61,0 -1.214,-0.028 -1.813,-0.07c0.6,0.041 1.203,0.07 1.813,0.07zM29.788,57.9c-1.217,-0.103 -2.411,-0.289 -3.574,-0.554c1.164,0.264 2.357,0.451 3.574,0.554z"></path></g></g></svg></a>
+            <a href="https://www.discordapp.com/users/Cyber Josh#6250" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0,0,256,256" width="45px" height="45px" fill-rule="nonzero"><g fill="#f3bf02" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M41.625,10.76953c-3.98047,-3.20313 -10.27734,-3.74609 -10.54687,-3.76563c-0.41797,-0.03516 -0.81641,0.19922 -0.98828,0.58594c-0.01562,0.02344 -0.15234,0.33984 -0.30469,0.83203c2.63281,0.44531 5.86719,1.33984 8.79297,3.15625c0.46875,0.28906 0.61328,0.90625 0.32422,1.375c-0.19141,0.30859 -0.51562,0.47656 -0.85156,0.47656c-0.17969,0 -0.36328,-0.05078 -0.52734,-0.15234c-5.03125,-3.12109 -11.3125,-3.27734 -12.52344,-3.27734c-1.21094,0 -7.49609,0.15625 -12.52344,3.27734c-0.46875,0.29297 -1.08594,0.14844 -1.375,-0.32031c-0.29297,-0.47266 -0.14844,-1.08594 0.32031,-1.37891c2.92578,-1.8125 6.16016,-2.71094 8.79297,-3.15234c-0.15234,-0.49609 -0.28906,-0.80859 -0.30078,-0.83594c-0.17578,-0.38672 -0.57031,-0.62891 -0.99219,-0.58594c-0.26953,0.01953 -6.56641,0.5625 -10.60156,3.80859c-2.10547,1.94922 -6.32031,13.33984 -6.32031,23.1875c0,0.17578 0.04688,0.34375 0.13281,0.49609c2.90625,5.10938 10.83984,6.44531 12.64844,6.50391c0.00781,0 0.01953,0 0.03125,0c0.32031,0 0.62109,-0.15234 0.80859,-0.41016l1.82813,-2.51562c-4.93359,-1.27344 -7.45312,-3.4375 -7.59766,-3.56641c-0.41406,-0.36328 -0.45312,-0.99609 -0.08594,-1.41016c0.36328,-0.41406 0.99609,-0.45312 1.41016,-0.08984c0.05859,0.05469 4.69922,3.99219 13.82422,3.99219c9.14063,0 13.78125,-3.95312 13.82813,-3.99219c0.41406,-0.35937 1.04297,-0.32422 1.41016,0.09375c0.36328,0.41406 0.32422,1.04297 -0.08984,1.40625c-0.14453,0.12891 -2.66406,2.29297 -7.59766,3.56641l1.82813,2.51563c0.1875,0.25781 0.48828,0.41016 0.80859,0.41016c0.01172,0 0.02344,0 0.03125,0c1.80859,-0.05859 9.74219,-1.39453 12.64844,-6.50391c0.08594,-0.15234 0.13281,-0.32031 0.13281,-0.49609c0,-9.84766 -4.21484,-21.23828 -6.375,-23.23047zM18.5,30c-1.93359,0 -3.5,-1.78906 -3.5,-4c0,-2.21094 1.56641,-4 3.5,-4c1.93359,0 3.5,1.78906 3.5,4c0,2.21094 -1.56641,4 -3.5,4zM31.5,30c-1.93359,0 -3.5,-1.78906 -3.5,-4c0,-2.21094 1.56641,-4 3.5,-4c1.93359,0 3.5,1.78906 3.5,4c0,2.21094 -1.56641,4 -3.5,4z"></path></g></g></svg></a>
+            <a href="https://www.instagram.com/pierre_louis.cmrt/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0,0,256,256" width="45px" height="45px" fill-rule="nonzero"><g fill="#f3bf02" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(4,4)"><path d="M21.58008,7c-8.039,0 -14.58008,6.54494 -14.58008,14.58594v20.83203c0,8.04 6.54494,14.58203 14.58594,14.58203h20.83203c8.04,0 14.58203,-6.54494 14.58203,-14.58594v-20.83398c0,-8.039 -6.54494,-14.58008 -14.58594,-14.58008zM47,15c1.104,0 2,0.896 2,2c0,1.104 -0.896,2 -2,2c-1.104,0 -2,-0.896 -2,-2c0,-1.104 0.896,-2 2,-2zM32,19c7.17,0 13,5.83 13,13c0,7.17 -5.831,13 -13,13c-7.17,0 -13,-5.831 -13,-13c0,-7.169 5.83,-13 13,-13zM32,23c-4.971,0 -9,4.029 -9,9c0,4.971 4.029,9 9,9c4.971,0 9,-4.029 9,-9c0,-4.971 -4.029,-9 -9,-9z"></path></g></g></svg></a>
+          </div>
       <svg id='scrollup' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 200.387 200.387" style="enable-background:new 0 0 200.387 200.387;" xml:space="preserve" width="28px" height="28px"><g><g><g><polygon points="5.504,154.449 0,149.102 100.197,45.938 200.387,149.102 194.893,154.449 100.197,56.947         " fill="#f3bf02"/></g></g><polygon points="100.197,45.938 0,149.102 5.504,154.449 100.197,56.947 194.893,154.449 200.387,149.102     " fill="#f3bf02"/></g>
       </svg>
-      <div class='copy'>Copyright &copy; 2023 by Maycon Luiz (https://codepen.io/mycnlz/pen/qZNKve)<br>Original design largely modified by Josh.</div>
+      <div class='copy'>Original design largely modified by Josh.<br> Copyright &copy; 2023 by Maycon Luiz (https://codepen.io/mycnlz/pen/qZNKve)</div>
     </section>
   </div>
 </div>
