--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class='section-name' id='sec-projects'>PROJECTS</div>
       <div class='section-title'>Finished websites</div>
       <div class='projects-container'>
-        <a href="https://project-adonis.github.io/Immersive-Worlds/" target="_blank"> <div class='projects-item'><div class='item-number'>01</div><div class='item-text'>Immersive Worlds
+        <a href="https://projectadonis.github.io/Immersive-Worlds/" target="_blank"> <div class='projects-item'><div class='item-number'>01</div><div class='item-text'>Immersive Worlds
           <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
           0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
