--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
           </svg>
           </div></div></a>
-          <a href="https://projectadonis.github.io/Chernobyl/"> <div class='projects-item'><div class='item-number'>02</div><div class='item-text'>History: Chernobyl
+          <a href="https://projectadonis.github.io/Chernobyl/" target="_blank"> <div class='projects-item'><div class='item-number'>02</div><div class='item-text'>History: Chernobyl
           <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
           0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
