--- a/index.html
+++ b/index.html
@@ -33,7 +33,19 @@
       <div class='section-name' id='sec-projects'>PROJECTS</div>
       <div class='section-title'>Finished websites</div>
       <div class='projects-container'>
-        <a href="https://projectadonis.github.io/Immersive-Worlds/" target="_blank"> <div class='projects-item'><div class='item-number'>01</div><div class='item-text'>Immersive Worlds
+        <a href="https://projectadonis.github.io/Immersive-Worlds/" target="_blank"> <div class='projects-item'><div class='item-number'>01</div><div class='item-text'>Immersive Worlds            <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
+          0 48 48">
+          <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
+          0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
+          0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6 
+          6-6v-12c0-1.2-0.8-2-2-2z"></path>
+          <path d="M43.8 5.2c-0.2-0.4-0.6-0.8-1-1-0.2-0.2-0.6-0.2-0.8-0.2h-12c-1.2 
+          0-2 0.8-2 2s0.8 2 2 2h7.2l-18.6 18.6c-0.8 0.8-0.8 2 0 2.8 0.4 0.4 0.8 
+          0.6 1.4 0.6s1-0.2 1.4-0.6l18.6-18.6v7.2c0 1.2 0.8 2 2 2s2-0.8 
+          2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
+          </svg>
+        </div></div></a>
+        <a href="https://projectadonis.github.io/Chernobyl/" target="_blank"> <div class='projects-item'><div class='item-number'>02</div><div class='item-text'>History: Chernobyl
           <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
           0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
@@ -45,8 +57,8 @@
           0.6 1.4 0.6s1-0.2 1.4-0.6l18.6-18.6v7.2c0 1.2 0.8 2 2 2s2-0.8 
           2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
           </svg>
-          </div></div></a>
-          <a href="https://projectadonis.github.io/Chernobyl/" target="_blank"> <div class='projects-item'><div class='item-number'>02</div><div class='item-text'>History: Chernobyl
+        </div></div></a>
+        <a href="https://projectadonis.github.io/Old/" target="_blank"> <div class='projects-item'><div class='item-number'>03</div><div class='item-text'>My old personal website
           <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
           0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
@@ -58,8 +70,8 @@
           0.6 1.4 0.6s1-0.2 1.4-0.6l18.6-18.6v7.2c0 1.2 0.8 2 2 2s2-0.8 
           2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
           </svg>
-          </div></div></a>
-          <a href="#"> <div class='projects-item'><div class='item-number'>03</div><div class='item-text'>AI tools directory<br> Work in progress!
+        </div></div></a>
+        <a href="https://projectadonis.github.io/Lycee/" target="_blank"> <div class='projects-item'><div class='item-number'>04</div><div class='item-text'>Reproduction of my high school website
           <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
           0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
@@ -71,7 +83,11 @@
           0.6 1.4 0.6s1-0.2 1.4-0.6l18.6-18.6v7.2c0 1.2 0.8 2 2 2s2-0.8 
           2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
           </svg>
-          </div></div></a>
+        </div></div></a>
+        <a href="#" target="_blank"> <div class='projects-item'><div class='item-number'>05</div><div class='item-text'>Pomodoro timer website<br> Work in progress!
+        </div></div></a>
+        <a href="#"> <div class='projects-item'><div class='item-number'>06</div><div class='item-text'>Prompts Directory<br> Work in progress!
+        </div></div></a>
       </div>
     </section>
     <section class='goal'>
