fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div></div></a>
         <a href="#" target="_blank"> <div class='projects-item'><div class='item-number'>05</div><div class='item-text'>Pomodoro timer website<br> Work in progress!
         </div></div></a>
-        <a href="#"> <div class='projects-item'><div class='item-number'>06</div><div class='item-text'>Prompts Directory<br> Work in progress!
+        <a href="#"> <div class='projects-item'><div class='item-number'>06</div><div class='item-text'>Prompt Directory<br> Work in progress!
         </div></div></a>
       </div>
     </section>
