--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </section>
     <section class='second-cta'>
       <div class='section-title negative'>About me</div>
-      <div class='about-content' id='sec-about'>I’m Josh, a 17-year-old French web designer. I love computers, online stuff, and gaming. I also do translations, proofreading, and audio visualizations. I learn web dev by recreating and getting inspired by websites. I aim to achieve elegance in every aspect, from design to functionality.
+      <div class='about-content' id='sec-about'>I’m <i>Josh</i>, a 17-year-old <b>French web designer</b>. I love computers, online stuff, and gaming. I also do translations, proofreading, and audio visualizations. I learn web dev by recreating and getting <i>inspired by websites</i>. I aim to achieve <b>elegance</b> in every aspect, from <u>design</u> to <u>functionality</u>.
       </div>
     </section>
     <section class='footer'>
