--- a/index.html
+++ b/index.html
@@ -9,14 +9,9 @@
 <body>
 <div class='screen'>
   <div class='nav'>
-    <button class="refresh" onClick="window.location.reload();" aria-label="Refresh page"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="36px" height="36px" viewBox="0 0 60 60" style="enable-background:new 0 0 199.522 199.522;" xml:space="preserve">
-      <path
-      d="m 6.6826 4.6879 c -1.1054 0 -1.9953 0.8962 -1.9953 2.0095 v 46.606 c 0 1.113 0.8899 2.009 1.9953 2.009 h 46.634 c 1.106 0 1.996 -0.896 1.996 -2.009 v -46.606 c 0 -1.1129 -0.89 -2.0091 -1.996 -2.0091 h -46.634 z M 6 7 L 53 7 L 6 53 M 53 53 L 6 53 L 53 7"
-      />
-      <path
-      d="m33.272 41.552v-23.145c0-1.165 0.311-2.059 0.934-2.682s1.436-0.935 2.439-0.935c1.016 0 1.829 0.305 2.438 0.915 0.623 0.609 0.935 1.51 0.935 2.702v20.239h7.234c1.056 0 1.883 0.278 2.479 0.833 0.596 0.542 0.894 1.314 0.894 2.317 0 0.975-0.298 1.747-0.894 2.316s-1.423 0.854-2.479 0.854h-10.607c-0.908 0-1.7-0.305-2.378-0.915-0.664-0.623-0.995-1.456-0.995-2.499zm-17.151-20.483v8.21h3.617c0.908 0 1.7-0.19 2.378-0.569 0.677-0.38 1.192-0.881 1.544-1.504s0.528-1.294 0.528-2.012c0-1.3-0.406-2.309-1.219-3.027-0.813-0.732-1.89-1.098-3.231-1.098h-3.617zm-6.746 20.524v-23.145c0-1.043 0.3319-1.869 0.996-2.479 0.677-0.623 1.47-0.935 2.377-0.935h8.27c1.762 0 3.421 0.393 4.979 1.179 1.571 0.772 2.824 1.93 3.759 3.475 0.948 1.53 1.423 3.366 1.423 5.506 0 1.965-0.387 3.719-1.159 5.263-0.772 1.531-1.903 2.73-3.393 3.597s-3.285 1.3-5.385 1.3h-5.121v6.239c0 1.178-0.311 2.079-0.934 2.702-0.61 0.61-1.423 0.915-2.439 0.915-0.989 0-1.802-0.312-2.438-0.935-0.6234-0.637-0.935-1.531-0.935-2.682z"
-      />
-    </svg></button>
+    <button class="refresh" onClick="window.location.reload();" aria-label="Refresh page">
+      <img src="Pictures/pa-logo.png" alt="PA logo" height="36px" width="36px">
+    </button>
     <nav>
       <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
       <button onclick="jump('sec-about');" class='button-nav'>About</button>
@@ -32,8 +27,7 @@
       <div class='section-name' id='sec-projects'>PROJECTS</div>
       <div class='section-title'>Finished websites</div>
       <div class='projects-container'>
-        <a href="https://projectadonis.github.io/Immersive-Worlds/" target="_blank"> <div class='projects-item'><div class='item-number'>01</div><div class='item-text'>Immersive Worlds            <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
-          0 48 48">
+        <a href="https://projectadonis.github.io/Immersive-Worlds/" target="_blank"> <div class='projects-item'><div class='item-number'>01</div><div class='item-text'>Immersive Worlds            <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
           0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6 
@@ -45,8 +39,7 @@
           </svg>
         </div></div></a>
         <a href="https://projectadonis.github.io/Chernobyl/" target="_blank"> <div class='projects-item'><div class='item-number'>02</div><div class='item-text'>History: Chernobyl
-          <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
-          0 48 48">
+          <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
           0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6 
@@ -58,8 +51,7 @@
           </svg>
         </div></div></a>
         <a href="https://projectadonis.github.io/Old/" target="_blank"> <div class='projects-item'><div class='item-number'>03</div><div class='item-text'>My old personal website
-          <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
-          0 48 48">
+          <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
           0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6 
@@ -71,8 +63,7 @@
           </svg>
         </div></div></a>
         <a href="https://projectadonis.github.io/Lycee/" target="_blank"> <div class='projects-item'><div class='item-number'>04</div><div class='item-text'>Reproduction of my high school website
-          <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
-          0 48 48">
+          <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
           0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6 
@@ -84,8 +75,7 @@
           </svg>
         </div></div></a>
         <a href="https://projectadonis.github.io/Prompt-Directory/" target="_blank"> <div class='projects-item'><div class='item-number'>05</div><div class='item-text'>Prompt Directory
-          <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 
-          0 48 48">
+          <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
           0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6 
