--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class='screen'>
   <div class='nav'>
     <button class="refresh" onClick="window.location.reload();" aria-label="Refresh page">
-      <img src="Pictures/pa-logo.png" alt="PA logo" height="36px" width="36px">
+      <img src="Pictures/pa-logo.png" alt="PA logo" class="nav-logo">
     </button>
     <nav>
       <button onclick="jump('sec-goal');" class='button-nav'>My Goal</button>
