--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
           2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
           </svg>
         </div></div></a>
-        <a href="https://projectadonis.github.io/Prompt-Directory/SD/index-sd.html" target="_blank"> <div class='projects-item'><div class='item-number'>05</div><div class='item-text'>Prompt Directory
+        <a href="https://projectadonis.github.io/StableDiffusion" target="_blank"> <div class='projects-item'><div class='item-number'>05</div><div class='item-text'>Stable Diffusion Prompts
           <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
-          0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6 
+          0-6 2.6-6 6v22c0 3.4 2.6 6 6 6h22c3.4 0 6-2.6 1
           6-6v-12c0-1.2-0.8-2-2-2z"></path>
           <path d="M43.8 5.2c-0.2-0.4-0.6-0.8-1-1-0.2-0.2-0.6-0.2-0.8-0.2h-12c-1.2 
           0-2 0.8-2 2s0.8 2 2 2h7.2l-18.6 18.6c-0.8 0.8-0.8 2 0 2.8 0.4 0.4 0.8 
@@ -94,7 +94,7 @@
           2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
           </svg>
         </div></div></a>
-        <a href="#" target="_blank"> <div class='projects-item'><div class='item-number'>06</div><div class='item-text'>Work in progress!
+        <a href="#" target="_blank"> <div class='projects-item'><div class='item-number'>06</div><div class='item-text'>ChatGPT Prompts <br>Work in progress!
         </div></div></a>
       </div>
     </section>
