--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
           </svg>
         </div></div></a>
-        <a href="https://projectadonis.github.io/404"> <div class='projects-item'><div class='item-number'>05</div><div class='item-text'>Coming Soon!
+        <a href="https://projectadonis.github.io/404" target="_blank"> <div class='projects-item'><div class='item-number'>05</div><div class='item-text'>Coming Soon!
           <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
@@ -94,7 +94,7 @@
           2-2v-12c0-0.2 0-0.6-0.2-0.8z"></path>
           </svg>
         </div></div></a>
-        <a href="https://projectadonis.github.io/404"> <div class='projects-item'><div class='item-number'>06</div><div class='item-text'>Coming Soon!
+        <a href="https://projectadonis.github.io/404" target="_blank"> <div class='projects-item'><div class='item-number'>06</div><div class='item-text'>Coming Soon!
           <svg style="display: inline-block; width: 1em; height: 1em; padding-top: 5px; fill:#5e5e5f;" viewbox="0 0 48 48">
           <path d="M36 24c-1.2 0-2 0.8-2 2v12c0 1.2-0.8 2-2 2h-22c-1.2 
           0-2-0.8-2-2v-22c0-1.2 0.8-2 2-2h12c1.2 0 2-0.8 2-2s-0.8-2-2-2h-12c-3.4 
