Update head html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Project Adonis</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" href="Pictures/pa-logo.webp" type="image/x-icon">
+    <meta property="og:title" content="Project Adonis">
+    <meta property="og:site_name" content="Project Adonis">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://www.projectadonis.github.io/">
+    <meta property="og:image" content="Pictures/pa-logo.webp">
   </head>
 <body style="background-color: #FFFBE9;">
   <div class="theme">
