--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Project Adonis</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" href="Pictures/pa-logo.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="Pictures/pa-logo.ico" type="image/x-icon">
     <meta property="og:title" content="Project Adonis">
     <meta property="og:site_name" content="Project Adonis">
     <meta property="og:type" content="website">
