--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Project Adonis</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="shortcut icon" href="Pictures/pa-logo.ico" type="image/x-icon">
+    <link rel="icon" href="/Pictures/pa-logo.ico?" type="image/x-icon">
     <meta property="og:title" content="Project Adonis">
     <meta property="og:site_name" content="Project Adonis">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://www.projectadonis.github.io/">
-    <meta property="og:image" content="Pictures/pa-logo.webp">
+    <meta property="og:image" content="/Pictures/pa-logo.ico">
   </head>
 <body style="background-color: #FFFBE9;">
   <div class="theme">
