--- a/index.html
+++ b/index.html
@@ -130,9 +130,8 @@
     </section>
     <section class='second-cta'>
       <div class='section-title negative'>About me</div>
-      <div class='about-content' id='sec-about'>I’m <i>Josh</i>, a 17-year-old <b>French web designer</b>. I love computers, online stuff, and gaming. I also do translations, proofreading, and audio visualizations. I learn web dev by recreating and getting <i>inspired by websites</i>. I aim to achieve <b>elegance</b> in every aspect, from <u>design</u> to <u>functionality</u>.
+      <div class='about-content' id='sec-about'>I’m <i>Josh</i>, a 17-year-old <b>French web designer</b>. I love computers (hardware and software), online stuff, and gaming. I'm also interested in AI (language models, image generation...). I learn web dev by recreating and getting <i>inspired by websites</i>. I aim to achieve <b>elegance</b> in every aspect, from <u>design</u> to <u>functionality</u>.
       </div>
-      <div class="content"></div>
     </section>
     <section class='footer'>
           <div class="social">
@@ -142,7 +141,7 @@
           </div>
       <svg id='scrollup' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="-20 -20 240.387 240.387" style="enable-background:new 0 0 200.387 200.387;" xml:space="preserve" width="28px" height="28px"><g><g><g><polygon points="5.504,154.449 0,149.102 100.197,45.938 200.387,149.102 194.893,154.449 100.197,56.947" fill="#22A699"/></g></g><polygon points="100.197,45.938 0,149.102 5.504,154.449 100.197,56.947 194.893,154.449 200.387,149.102" fill="#22A699"/></g>
       </svg>
-      <div class='copy'>Original design largely modified by Josh.<br> Copyright &copy; 2023 by Maycon Luiz</div>
+      <div class='copy'>Copyright &copy; 2023 by Josh.<br> Inspired by Maycon Luiz's design.</div>
     </section>
   </div>
 </div>
