--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             >
           </div>
           <button onclick="jump('sec-projects');" class="button-cta">
-            The Websites
+            My Creations
           </button>
         </section>
         <section class="projects">
           <div class="section-name" id="sec-projects">PROJECTS</div>
-          <div class="section-title">All websites</div>
+          <div class="section-title">All of my websites</div>
           <div class="projects-container">
             <a href="https://enigmatech.site/" target="_blank">
               <div class="projects-item">
@@ -202,7 +202,7 @@
               <div class="projects-item">
                 <div class="item-number">05</div>
                 <div class="item-text">
-                  Coming Soon! <br />History: Architecture
+                  Coming Soon! <br />
                   <svg
                     style="
                       display: inline-block;
@@ -232,7 +232,7 @@
               <div class="projects-item">
                 <div class="item-number">06</div>
                 <div class="item-text">
-                  Coming Soon! <br />ChatGPT Prompts
+                  Coming Soon! <br />
                   <svg
                     style="
                       display: inline-block;
